Edit industry/religion; gloss ark species

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 <section id="updates">
     <h2>Updates</h2>
     <div class="timeline-item">
+        <div class="timeline-date">12/28/25</div>
+        <div class="timeline-content">
+            Completed editing Chapter 8: Industry of Qeret. Completed glossing Chapter 4: Ark Species. Begun editing Chapter 9: Religion.
+        </div>
+    </div>
+    <div class="timeline-item">
         <div class="timeline-date">12/18/25</div>
         <div class="timeline-content">
             Edited and added Act V of <i>Return to Mycenae</i>.
