--- a/qeret.html
+++ b/qeret.html
@@ -40,13 +40,13 @@
             <ul class="triangle-list"> 
                 <li><a href="chapter1-introduction.html">Chapter 1: Introduction [Complete]</a></li>
                 <li><a href="chapter2-history.html">Chapter 2: History [Complete]</a></li>
-                <li><a href="chapter3-culture.html">Chapter 3: Culture & People [Complete]</a></a></li>
-                <li><a href="chapter4-arkspecies.html">Chapter 4: Ark Species [Glossing]</a></li>
+                <li><a href="chapter3-culture.html">Chapter 3: Culture & People [Complete]</a></li>
+                <li><a href="chapter4-arkspecies.html">Chapter 4: Ark Species [Complete]</a></li>
                 <li><a href="chapter5-science.html">Chapter 5: Science & Technology [Glossing]</a></li>
                 <li><a href="chapter6-philosophy.html">Chapter 6: Philosophy [Glossing]</a></li>
                 <li><a href="chapter7-revolution.html">Chapter 7: Revolution [Glossing]</a></li>
-                <li>Chapter 8: Industry [Editing]</a></li>
-                <li>Chapter 9: Religion [Editing]</a></li>
+                <li><a href="chapter8-industry.html">Chapter 8: Industry [Glossing]</a></li>
+                <li><a href="chapter9-religion.html">Chapter 9: Religion [Complete]</a></li>
                 <li>Chapter 10: Art [Editing]</a></li>
                 <li>Chapter 11: War & Diplomacy [Editing]</a></li>
                 <li>Chapter 12: Architecture & Contruction [Editing]</a></li>
