Edit cast in RtM GDD.

--- a/qeret.html
+++ b/qeret.html
@@ -46,7 +46,7 @@
                 <li><a href="chapter6-philosophy.html">Chapter 6: Philosophy [Glossing]</a></li>
                 <li><a href="chapter7-revolution.html">Chapter 7: Revolution [Glossing]</a></li>
                 <li><a href="chapter8-industry.html">Chapter 8: Industry [Glossing]</a></li>
-                <li><a href="chapter9-religion.html">Chapter 9: Religion [Complete]</a></li>
+                <li><a href="chapter9-religion.html">Chapter 9: Religion [Editing]</a></li>
                 <li>Chapter 10: Art [Editing]</a></li>
                 <li>Chapter 11: War & Diplomacy [Editing]</a></li>
                 <li>Chapter 12: Architecture & Contruction [Editing]</a></li>
