--- a/return-to-mycenae-gdd.html
+++ b/return-to-mycenae-gdd.html
@@ -146,9 +146,53 @@
             <h3 id="heroes">Heroes</h3>
 
             <p><b>Alexander</b> - <i>Heir of Alexion, Warrior of Shadow</i><br>
-            <u>Role:</u></p> 
+            <u>Role:</u> Protagonist<br>
+            <u>Affinity:</u> Shadow (Nyx)<br>
+            <u>Description:</u> Deeply anxious yet unmistakably brave, Alexander is haunted by whispers of his Mycenaean heritage. He begins as a humble villager but grows into a legendary warrior as he uncovers the secrets of his bloodline. Despite self-doubt, his courage and sense of justice never waver.<br>
+            <u>Combat Style:</u> Alexander serves as a reliable frontline combatant and battlefield anchor, specializing in high multi-target physical damage and party-wide defensive maneuvers. When drawing upon Nyx, Alexander gains overwhelming elemental dominance and burst potential, but at severe personal cost, rapidly depleting his HP and MP reserves and leaving him dangerously exposed if misused.<br>
+            <u>Signature Abilities:</u> <strong>Nyxian Slash</strong> – a powerful shadow strike that hits multiple foes; <strong>Phalanx Guard</strong> – a defensive stance that reduces damage taken by the entire party.
+</p>
+
+            <p><b>Isadora</b> - <i>Heir of Alexion, Warrior of Light</i><br>
+            <u>Role:</u> Co-protagonist<br>
+            <u>Affinity:</u> Light (Aither)<br>
+            <u>Description:</u> Intuitive, composed, and fiercely protective of her brother, Isadora balances Alexander’s anxiety with measured resolve. A prodigious student of arcane lore, she approaches magic as both discipline and inquiry, uncovering forgotten traditions and lost techniques as readily as she masters them. While quieter than her brother, her presence is stabilizing and decisive.<br>
+            <u>Combat Style:</u> Isadora functions as a highly adaptable single-target, elemental caster and primary support specialist, with a pronounced aptitude for Aither-based restorative magic. She provides party-wide healing, wards, and stabilization while channeling multiple elemental schools to exploit enemy weaknesses. As the party’s sole innate wielder of <strong>Aither</strong>, she is especially effective against Nyx-aligned foes; however, this attunement comes at a cost. Her heightened sensitivity to elemental forces renders her uniquely vulnerable to the four primary elements (Gē, Hydōr, Aēr, Pyr).<br>
+            <u>Signature Abilities:</u> <strong>Aitheric Veil</strong> – a party-wide enchantment that grants resistance to Nyx-based damage; <strong>Elemental Rapture</strong> – a costly, high-impact spell that compresses multiple elemental forces into a single devastating strike.</p>
+
+            <p><b>Nereus</b> - <i>Historian, Hydōrmancer</i><br>
+            <u>Role:</u> Scholar and healer<br>
+            <u>Affinity:</u> Water (Hydōr)<br>
+            <u>Description:</u> Calm, contemplative, and deeply learned, Nereus is an Ionian Hydōrmancer devoted to the lost histories of Mycenae. He possesses a powerful attunement to water and his robes, woven from  Ionian silk, shimmer perpetually with droplets of seawater.<br>
+            <u>Combat Style:</u> Nereus operates as a backline support caster, balancing restorative magic with debilitating debuffs. His Hydōr-based spells specialize in healing, cleansing, and the unraveling of enemy enchantments, while also allowing him to weaken or erode fire-based foes.<br>
+            <u>Signature Abilities:</u> <strong>Tide Mend</strong> – a restorative spell that heals allies and removes harmful debuffs; <strong>Drowning Hex</strong> – a water curse that weakens enemy defenses and disrupts ongoing enchantments.
+
+</p>
+
+            <p><b>Ianthe</b> - <i>Aeolian Rogue, Aēromancer</i><br>
+            <u>Role:</u> Thief and heavy-hitter<br>
+            <u>Affinity:</u> Air (Aēr)<br>
+            <u>Description:</u> Brash, quick-witted, and fiercely independent, Ianthe hails from the cliff-top cities of Aeolia. Known for her violet hair and near-weightless grace, she moves with a speed honed by a life of risk and opportunism. Though initially driven by self-interest and survival, she gradually embraces the bonds of the party, trading solitude for loyalty.<br>
+            <u>Combat Style:</u>  Ianthe excels as a high damage striker focused on precision and single-target elimination. Her swift, wind-infused attacks exploit can incapacitate priority targets before they act. When her strikes land effectively — especially against earth foes — she generates additional <strong>Actions</strong>, allowing skilled players to chain attacks and maintain offensive momentum.<br>
+            <u>Signature Abilities:</u> <strong>Aeolian Subterfuge</strong> – a lightning-fast, wind-infused strike that grants additional actions on a successful hit, with further rewards for exploiting weaknesses; <strong>Steal</strong> – pilfers items and rare Badges from enemies, making Ianthe the party’s primary means of acquiring hidden and powerful equipment.</p>
+
+            <p><b>Archimedes</b> – <i>Attian Sorcerer, Picarro</i><br>
+            <u>Role:</u> High-offense sorcerer<br>
+            <u>Affinity:</u> Fire (Pyr), Earth (Gē), Water (Hydōr)<br>
+            <u>Description:</u> Flamboyant, arrogant, and undeniably brilliant, Archimedes is a politically ambitious sorcerer from Attia, groomed from youth to excel as both orator and spellcaster. His education spans the academies of Attia, the fortified strongholds of Doria, and the scholarly halls of Ionia, granting him rare mastery over multiple elemental traditions. Though his braggadocio frequently clashes with the party’s more earnest members, his intellect and raw power cannot be dismissed.<br>
+            <u>Combat Style:</u> Archimedes functions as devastating magical artillery, specializing in high-cost, high-impact area-of-effect spells capable of annihilating enemy groups. His most powerful incantations require significant preparation, often demanding multiple <strong>Actions</strong>, leaving him vulnerable without protection. With low defense, he relies heavily on allies to shield him while he prepares his spells, but when his magic is unleashed, the results are catastrophic.<br>
+            <u>Signature Abilities:</u> <strong>Helion’s Breath</strong> – a catastrophic fire incantation that engulfs all enemies in flames; <strong>Seismos</strong> – an earth-shattering spell that fractures the ground beneath foes; <strong>Lash of Io</strong> – a torrential water spell striking all enemies. 
+</p>    
 
             <h3 id="villains">Villains</h3>
+            
+            <p><b>Alexion</b> - <i>Primary Antagonist, Demigod Son of Atropos</i><br>
+            <u>Description:</u> Mythologized as Mycenae’s last great champion, Alexion is revealed as the architect of its ruin. Corrupted by Nyx, he pursues a world remade in his own image and becomes the hidden progenitor of Alexander and Isadora’s bloodline, binding the protagonists to his malignant legacy.</p>
+
+            <p><b>Nyx-Manifest</b> - <i>Final Adversary, Goddess of Darkness</i><br>
+            <u>Description:</u> The metaphysical embodiment of darkness. Nyx-Manifest is Alexion’s rebellion incarnate. Defeating her completes the closed time loop and frames the ending/New Game+.</p>
+            </p>
+
             <h3 id="gods">Gods of Pelagon – The Myrion</h3>
         </section>
 
